# wawt

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  doxyconfig.in
examples/adapters/: CMakeLists.txt  drawoptions.h  sfmladapter.cpp  sfmladapter.h  sfmldrawadapter.cpp  sfmldrawadapter.h
examples/factorysamples/: CMakeLists.txt  addon.h  bullet.h  button.h  canvas.h  label.h  list.h  panel.h  sfmlmain.cpp
examples/tictacdoh/: CMakeLists.txt  controller.cpp  controller.h  gamemaster.cpp  gamemaster.h  gamescreen.cpp  gamescreen.h  main.cpp  setupscreen.cpp  setupscreen.h  sfmlmain.cpp  stringid.cpp  stringid.h
examples/viewscreen/: CMakeLists.txt  sfmlmain.cpp
include/wawt/: draw.h  drawprotocol.h  dropdownlist.h  eventrouter.h  input.h  ipcmessage.h  ipcprotocol.h  ipcqueue.h  ipcsession.h  layout.h  screen.h  scrolledlist.h  text.h  textentry.h  utilities.h  wawt.h  wawtenv.h  widget.h  widgetfactory.h
lib/: CMakeLists.txt  wawt.cpp  wawt.h  wawt_id.h  wawtconnector.cpp  wawtconnector.h  wawteventrouter.cpp  wawteventrouter.h  wawtid.h  wawtipcprotocol.cpp  wawtipcprotocol.h  wawtscreen.h
reference_impl/: CMakeLists.txt  drawoptions.h  ipcadapter.cpp  ipcadapter.h  sfmldrawadapter.cpp  sfmldrawadapter.h  sfmleventloop.cpp  sfmleventloop.h  sfmlipcadapter.cpp  sfmlipcadapter.h
src/wawt/: .clang_complete  CMakeLists.txt  dropdownlist.cpp  eventrouter.cpp  ipcmessage.cpp  ipcqueue.cpp  ipcsession.cpp  scrolledlist.cpp  textentry.cpp  wawt.cpp  widgetfactory.cpp
tests/: CMakeLists.txt  wawtenv_t.cpp  widget_t.cpp  widgetfactory_t.cpp
